# calculator-lab

./: CMakeLists.txt  README.md
include/: plugin_api.h
plugins_src/funcdeg/: CMakeLists.txt  funcdeg.cpp
plugins_src/funcln/: CMakeLists.txt  funcln.cpp
plugins_src/funcsin/: CMakeLists.txt  funcsin.cpp
src/: main.cpp
src/calculator/: Evaluator.cpp  Evaluator.h  ShuntingYard.cpp  ShuntingYard.h  Tokenizer.cpp  Tokenizer.h
src/plugins/: PluginLoader.cpp  PluginLoader.h
tests/: calc_selftest.cpp  selftest.h  selftests_report.txt
